--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,6 +32,12 @@ jobs:
         id: fmt
         run: terraform fmt -check
 
+      - name: Terraform Login
+        id: login
+        run: terraform login
+        env:
+          terraform_login: ${{ secrets.TERRAFORM_LOGIN }}
+
       - name: Terraform Init
         id: init
         run: terraform init
